NotesManager: [update] Updated Swagger schemas
